--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #1a202c; /* Optional: Dark overlay */
+    background-color: #f4f9ff; /* Optional: Dark overlay */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,8 +39,8 @@
   .loader {
     width: 55px;
     aspect-ratio: 1;
-    --g1: conic-gradient(from 90deg at 3px 3px, #0000 90deg, #fff 0);
-    --g2: conic-gradient(from -90deg at 22px 22px, #0000 90deg, #fff 0);
+    --g1: conic-gradient(from 90deg at 3px 3px, #0000 90deg, #000 0);
+    --g2: conic-gradient(from -90deg at 22px 22px, #0000 90deg, #000 0);
     background: var(--g1), var(--g1), var(--g1), var(--g2), var(--g2), var(--g2);
     background-size: 25px 25px;
     background-repeat: no-repeat;
